Mon Dec 30 21:30:41 2002  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_hpux_gcc.GNU: Removed the SOVERSION=
          line to allow versions libraries to be set up properly.

        * ace/Based_Pointer_Repository.cpp:
        * ace/Dynamic.cpp:
        * ace/SString.cpp:
        * tests/Framework_Component_DLL.cpp:
        * tests/MEM_Stream_Test.cpp:
        * tests/Process_Strategy_Test.cpp:
        * tests/Timeprobe_Test.cpp:
        * apps/drwho/File_Manager.cpp:
        * examples/IPC_SAP/SOCK_SAP/CPP-inclient.cpp:
        * examples/IPC_SAP/SOCK_SAP/CPP-inserver-fancy.cpp:
        * examples/Logger/Acceptor-server/server_loggerd.cpp:
        * examples/Logger/simple-server/server_loggerd.cpp:
        * examples/Threads/auto_event.cpp:
        * examples/Threads/tss2.cpp:
          Add __hpux to the conditions needed to instantiate
          static template members. Also see
          Sat Nov 23 18:12:37 2002  Steve Huston  <shuston@riverace.com>

Mon Dec 30 19:32:18 2002  Steve Huston  <shuston@riverace.com>

        * tests/Codecs_Test.cpp: Add explicit template instantiation for
          ACE_Auto_Basic_Array_Ptr<ACE_Byte>.

Mon Dec 30 18:44:20  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv2/TP_Logging_Server.cpp:
        * examples/IPC_SAP/SOCK_SAP/CPP-inclient.cpp:
        * examples/IPC_SAP/SOCK_SAP/CPP-inserver-fancy.cpp:
        * examples/Logger/Acceptor-server/server_loggerd.cpp:
        * examples/Logger/simple-server/server_loggerd.cpp:
        * examples/Threads/auto_event.cpp:
        * examples/Threads/tss2.cpp:
        * performance-tests/Misc/test_singleton.cpp:
          More singleton_ instantiations for g++ on AIX.

Mon Dec 30 18:11:39 2002  Steve Huston  <shuston@riverace.com>

        * apps/drwho/File_Manager.cpp:  Add explicit instantiation of
          ACE_Singleton<File_Manager, ACE_Null_Mutex>::singleton_.
          Similar to those done for: